[gd_scene load_steps=30 format=3 uid="uid://engkey00jmu8"]

[ext_resource type="Texture2D" uid="uid://hiis5ai5t8if" path="res://common/assets/Char_Boy.png" id="1_7pwo4"]
[ext_resource type="Script" uid="uid://uirvn6fix665" path="res://programs/games/robot_rescue/ents/enemies/scientist.gd" id="1_admab"]
[ext_resource type="PackedScene" uid="uid://b58wrwnd1spvr" path="res://programs/games/robot_rescue/common/attributes/weapon.tscn" id="2_i4tkl"]
[ext_resource type="Resource" uid="uid://dvd0jvlle4fl2" path="res://programs/games/robot_rescue/common/resources/scientist.tres" id="4_4vklu"]
[ext_resource type="PackedScene" uid="uid://domdwesslpbyg" path="res://programs/games/robot_rescue/common/attributes/hitbox.tscn" id="5_vlu8i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i4tkl"]
atlas = ExtResource("1_7pwo4")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_admab"]
atlas = ExtResource("1_7pwo4")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r34wv"]
atlas = ExtResource("1_7pwo4")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlu8i"]
atlas = ExtResource("1_7pwo4")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4c4r"]
atlas = ExtResource("1_7pwo4")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrlwq"]
atlas = ExtResource("1_7pwo4")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_33lut"]
atlas = ExtResource("1_7pwo4")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qa3vu"]
atlas = ExtResource("1_7pwo4")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6is3o"]
atlas = ExtResource("1_7pwo4")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmf75"]
atlas = ExtResource("1_7pwo4")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0gyu"]
atlas = ExtResource("1_7pwo4")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwe2r"]
atlas = ExtResource("1_7pwo4")
region = Rect2(240, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4481j"]
atlas = ExtResource("1_7pwo4")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugwpc"]
atlas = ExtResource("1_7pwo4")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_35v2a"]
atlas = ExtResource("1_7pwo4")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjmn5"]
atlas = ExtResource("1_7pwo4")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n13l1"]
atlas = ExtResource("1_7pwo4")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2hia"]
atlas = ExtResource("1_7pwo4")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jkis"]
atlas = ExtResource("1_7pwo4")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejlsw"]
atlas = ExtResource("1_7pwo4")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_okqbu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4tkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_admab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r34wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlu8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4c4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrlwq")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33lut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qa3vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6is3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmf75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0gyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwe2r")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4481j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugwpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35v2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjmn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n13l1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2hia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jkis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejlsw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pwo4"]
size = Vector2(15, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_admab"]
size = Vector2(214, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4c4r"]
size = Vector2(15, 22)

[node name="scientist" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 31
script = ExtResource("1_admab")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0.7921569, 0.21960784, 1)
sprite_frames = SubResource("SpriteFrames_okqbu")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -3)
shape = SubResource("RectangleShape2D_7pwo4")

[node name="Weapon" parent="." instance=ExtResource("2_i4tkl")]
position = Vector2(0, -2)
_laser_data = ExtResource("4_4vklu")

[node name="AlertBox" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertBox"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_admab")

[node name="Hitbox" parent="." instance=ExtResource("5_vlu8i")]
collision_layer = 2
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1.5, -3)
shape = SubResource("RectangleShape2D_l4c4r")

[connection signal="body_entered" from="AlertBox" to="." method="_on_alert"]
[connection signal="body_exited" from="AlertBox" to="." method="_on_alert_exited"]
[connection signal="no_health" from="Hitbox" to="." method="_on_no_health"]
